<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE6A7"
    tools:context=".features.dashboard.ui.DashboardActivity">

    <ImageView
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:padding="12dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alata"
        android:text="@string/greeting_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/alata"
        android:text="Username"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/trainingCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/training_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/training"
                app:tint="#432818" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alata"
            android:text="@string/dashboard_training_title"
            android:textColor="#432818" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/checklistCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/checklist_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/checklist"
                app:tint="#432818" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/safetyChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alata"
            android:text="@string/dashboard_checklist_title"
            android:textColor="#432818" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/incidentCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/repo_incident"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/incident"
                app:tint="#432818" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/reportIncidents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alata"
            android:text="@string/dashboard_incident_title"
            android:textColor="#432818" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>